@@ -21,6 +21,7 @@ Accueil élèves et parents
 
 Statistiques:
 - Ajout de l'extraction des sous-groupes ne concernant qu'une classe.
+- Possibilité d'exporter l'établissement d'origine dans l'export de Bulletins.
 
 Général:
 - Affichage de l'identité de la personne qui suit la classe (chef, adjoint)
